compiler/src/test/test_cases/invalid/syntaxErr/function/duplicateImport.wacc
# Duplicate imports

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

import importedFile
import importedFile

begin
  int x = 15 ;
  x = call dec(x) ;
  println x
end